src/objects/Participation_Code__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <description>Related Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Participation Codes</relationshipLabel>
        <relationshipName>Participation_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <description>Type of Code</description>
        <label>Code Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACLI_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_Value__c</fullName>
        <description>Value of Code</description>
        <label>Code Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Participation Code</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Participation Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participation Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>